--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "purple-admin-ui",
+  "name": "mindBridge-admin",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4000",
     "build": "next build",
     "export": "next export",
     "start": "next start",
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.16.1",
+    "@tanstack/react-query": "^5.28.0",
     "@uiw/react-codemirror": "^4.21.9",
     "antd": "^5.7.3",
+    "axios": "^1.6.7",
     "dayjs": "^1.11.9",
     "framer-motion": "^10.15.0",
-    "ky": "^0.33.3",
-    "ky-universal": "^0.12.0",
+    "immer": "^10.0.4",
     "lucide-react": "^0.263.1",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
@@ -25,8 +26,7 @@
     "react": "18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
-    "react-quill": "^2.0.0",
-    "swr": "^2.2.0"
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
