--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
