--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "antd": "^5.7.3",
     "antd-img-crop": "^4.21.0",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "dayjs": "^1.11.11",
     "framer-motion": "^10.15.0",
     "immer": "^10.0.4",
@@ -25,11 +27,13 @@
     "numeral": "^2.0.6",
     "qs": "^6.11.2",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroll-hook": "^4.1.1",
     "react-quill": "^2.0.0",
+    "react-vis": "^1.12.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
