--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroll-hook": "^4.1.1",
+    "react-lottie-player": "^2.1.0",
     "react-quill": "^2.0.0",
     "react-vis": "^1.12.1",
     "zustand": "^4.5.2"
