--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 NEXTAUTH_URL=http://localhost:4000
 NEXTAUTH_SECRET=a591b0fa43d8535e41a3d864f193ff76
-NEXT_PUBLIC_API_ENDPOINT=http://localhost:3000
+NEXT_PUBLIC_API_ENDPOINT=https://dev.api.mindbridge.prestlab.com
