--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 NEXTAUTH_URL=http://localhost:4000
 NEXTAUTH_SECRET=a591b0fa43d8535e41a3d864f193ff76
-NEXT_PUBLIC_API_ENDPOINT=https://mindqna.prestlab.com
+NEXT_PUBLIC_API_ENDPOINT=https://api.mindbridge.prestlab.com
