--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.16.1",
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@tanstack/react-query": "^5.28.0",
     "@uiw/react-codemirror": "^4.21.9",
     "antd": "^5.7.3",
@@ -18,6 +23,9 @@
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.11",
     "framer-motion": "^10.15.0",
     "immer": "^10.0.4",
@@ -30,12 +38,14 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.4.2",
+    "react-day-picker": "8.10.1",
     "react-dom": "18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroll-hook": "^4.1.1",
     "react-lottie-player": "^2.1.0",
     "react-quill": "^2.0.0",
-    "react-vis": "^1.12.1",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
