--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/cssinjs": "^1.16.1",
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-progress": "^1.1.6",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.11",
