fix: 유저 테이블 관련 수정

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 NEXTAUTH_URL=http://localhost:4000
 NEXTAUTH_SECRET=a591b0fa43d8535e41a3d864f193ff76
-NEXT_PUBLIC_API_ENDPOINT=https://dev-china.api.mindbridge.prestlab.com
+NEXT_PUBLIC_API_ENDPOINT=https://dev.api.mindbridge.prestlab.com
 # NEXT_PUBLIC_API_ENDPOINT=http://localhost:3000
